src/test/ui/parser/lex-stray-backslash.stderr
error: unknown start of token: /
  --> $DIR/lex-stray-backslash.rs:3:1
   |
LL | / //~ ERROR: unknown start of token: /
   | ^

error: aborting due to previous error

